@@ -32,15 +32,20 @@ use pocketmine\level\Position;
 class PlayerListener extends BaseListener
 {
 
-    public function onPlayerLogin(PlayerLoginEvent $event)
+    public function onPlayerJoin(PlayerJoinEvent $event)
     {
         $t = $this->getPlugin()->data->getAll();
-
         if ($this->getPlugin()->playerProfileExists(strtolower($event->getPlayer()->getName())) !== true) {
-            $this->getPlugin()->initializePlayerProfile(strtolower($event->getPlayer()->getName()));
+            $t[$event->getPlayer()->getName()]["jailed"] = false;
+            $t[$event->getPlayer()->getName()]["gamemode"] = $this->getPlugin()->getServer()->getGamemode();
+            $t[$event->getPlayer()->getName()]["voteForJail"]["votes"] = 0;
+            $t[$event->getPlayer()->getName()]["voteForJail"]["votedBy"] = []; //Players who voted for him
+            $t[$event->getPlayer()->getName()]["uuid"] = $event->getPlayer()->getUniqueId();
+            $this->getPlugin()->data->setAll($t);
+            $this->getPlugin()->data->save();
         }
         if ($event->getPlayer()->hasPermission("jail.uuidcheck.bypass") !== true) {
-            foreach (array_keys($t) as $name) {
+            foreach ($t as $name => $value) {
                 if ($t[$name]["jailed"] !== false && $event->getPlayer()->getUniqueId() == $t[$name]["uuid"]) {
                     $event->getPlayer()->kick($this->getPlugin()->getMessage("join.uuid.rejected.kickmsg"));
                 }
@@ -49,11 +54,6 @@ class PlayerListener extends BaseListener
         $t[strtolower($event->getPlayer()->getName())]["uuid"] = $event->getPlayer()->getUniqueId();
         $this->getPlugin()->data->setAll($t);
         $this->getPlugin()->data->save();
-    }
-
-    public function onPlayerJoin(PlayerJoinEvent $event)
-    {
-        $t = $this->getPlugin()->data->getAll();
         if ($this->getPlugin()->isJailed(strtolower($event->getPlayer()->getName())) && $t[strtolower($event->getPlayer()->getName())]["seconds"] < 0) {
             $this->getPlugin()->unjail(strtolower($event->getPlayer()->getName()));
         }
